  - sort file selector items case-insensitively with folders first
  - Partial support for showing Latin1 chars from UTF-8 file names
- Debugger:
  - Fix: crash when GEMDOS tracing is used without GEMDOS HD emulation
  - Fix: update external disassembler's CPU mask when CPU type is changed
    (it wasn't restricted to only the valid opcodes for a CPU type)
  - Add "reset <hard|soft>" command
  - Add "save" subcommand to "history" command

Other changes:
- Remaining Hatari OSX UI changes for Hatari v1.8.0
  (localization)


 Version 1.8.0 (2014-07-30):
 ---------------------------

Emulation:
- ST video changes :
  - Handle 0 byte line by switching freq in STE mode
  - Use high res when ff8260 is set to 3
  - Randomly return 0 or 1 when reading unused bits 3,7 and 11 of
    color registers (except when running from ROM)
  - Better detection of bottom border removal on a 60 Hz screen
  - support for color change during only 4 cycles
  - better bitmap/color alignment for STE med res overscan at 60 Hz
  - Set default value of nSpec512Threshold to "1" instead of "16"
  - Update the position of the next VBL when 50Hz and 60Hz lines are mixed
  - When video address is set into IO region, keep the video pointer on 24 bits
- Videl changes :
  - correct masking of the true color palette registers
- CPU changes :
  - Fix a case when MFP's interrupt happens during the IACK sequence
    for HBL/VBL
  - Many prefetch changes required by some game's protection
- Sound changes :
  - Fix STE sound mixing using LMC when mixer=0 (DMA sound only)
  - Fix some crossbar's sound errors for Falcon
  - Fix Microwire's decoding of mask/data (based on official LMC1992's doc)
- FDC changes :
  - Add configurable RPM speed for each floppy drive, the possibility
    to turn each drive ON/OFF and the choice between single or double
    sided drive
  - Correct timings, behaviour and status register for all commands
    when a drive is OFF or empty.